feat: update main_notebook.ipynb evaluations
- Evaluation metrics on training and test data.
- Added "Evaluate Results" section with evaluation code and metrics.

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I:\\Temp\\ipykernel_36780\\2116053093.py:1: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "I:\\Temp\\ipykernel_20876\\2116053093.py:1: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  df = pd.read_csv('data/Indian_IPO_Market_Data.csv', parse_dates=['Date '])\n"
      ]
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "4              2.26                1.12           75                  -5.20  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
        "318                  43.14  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
        "std              48.772203   353.897614              47.650946  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
        "max            326.490000  2150.000000              1.000000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1210,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
        "max            1.000000          1.000000            1.000000     1.000000"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1378,7 @@
        "(255, 4)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1389,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -1398,7 +1398,7 @@
        "(64, 4)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1409,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -1421,7 +1421,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -1444,7 +1444,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1462,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1478,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1498,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1514,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1523,26 +1523,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_8\"\n",
+      "Model: \"sequential_3\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " dense_70 (Dense)            (None, 64)                320       \n",
+      " dense_15 (Dense)            (None, 64)                320       \n",
       "                                                                 \n",
-      " dense_71 (Dense)            (None, 32)                2080      \n",
+      " dense_16 (Dense)            (None, 32)                2080      \n",
       "                                                                 \n",
-      " dense_72 (Dense)            (None, 16)                528       \n",
+      " dense_17 (Dense)            (None, 16)                528       \n",
       "                                                                 \n",
-      " dense_73 (Dense)            (None, 8)                 136       \n",
+      " dense_18 (Dense)            (None, 8)                 136       \n",
       "                                                                 \n",
-      " dense_74 (Dense)            (None, 1)                 9         \n",
+      " dense_19 (Dense)            (None, 1)                 9         \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 3,073\n",
@@ -1565,49 +1565,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x2490e01b190>"
+       "<keras.callbacks.History at 0x137c3f67cd0>"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model.fit(X_train, y_train, epochs=150, verbose=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2/2 [==============================] - 0s 2ms/step - loss: 0.6957 - accuracy: 0.6875\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[0.6957231760025024, 0.6875]"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.evaluate(X_test, y_test)"
    ]
   },
   {
@@ -1618,9 +1591,58 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 151,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8/8 [==============================] - 0s 2ms/step - loss: 0.5058 - accuracy: 0.7451\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.505832314491272, 0.7450980544090271]"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2/2 [==============================] - 0s 3ms/step - loss: 1.5731 - accuracy: 0.7031\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1.5730617046356201, 0.703125]"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(X_test, y_test)"
+   ]
   }
  ],
  "metadata": {
