fix: correct evaluation in main_notebook.ipynb

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -1876,38 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Sequential(\n",
-       "  (0): Linear(in_features=4, out_features=64, bias=True)\n",
-       "  (1): ReLU()\n",
-       "  (2): Linear(in_features=64, out_features=32, bias=True)\n",
-       "  (3): ReLU()\n",
-       "  (4): Linear(in_features=32, out_features=16, bias=True)\n",
-       "  (5): ELU(alpha=1.0)\n",
-       "  (6): Linear(in_features=16, out_features=8, bias=True)\n",
-       "  (7): ELU(alpha=1.0)\n",
-       "  (8): Linear(in_features=8, out_features=1, bias=True)\n",
-       "  (9): Sigmoid()\n",
-       ")"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.eval()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -1936,12 +1905,12 @@
     "\n",
     "for key, tensor_list in train_test_tensors.items():\n",
     "    X, y = tensor_list\n",
+    "    model.eval()\n",
     "    with torch.no_grad():\n",
     "        test_outputs = model(X)\n",
     "        predicted_labels = (test_outputs > 0.5).float()\n",
-    "\n",
-    "    predicted_labels = predicted_labels.cpu().numpy()\n",
-    "    y_true = y.cpu().numpy()\n",
+    "        predicted_labels = predicted_labels.cpu().numpy()\n",
+    "        y_true = y.cpu().numpy()\n",
     "\n",
     "    accuracy = accuracy_score(y_true, predicted_labels)\n",
     "    precision = precision_score(y_true, predicted_labels)\n",
